--- a/package.json
+++ b/package.json
@@ -11,32 +11,27 @@
     "raspberry pi",
     "beagle bone"
   ],
-  "version": "0.0.10",
+  "version": "1.0.0",
   "engines": {
-    "node": ">=0.10"
+    "node": ">=4"
   },
   "scripts": {
-    "build": "tsd update && tsc",
-    "pretest": "npm run build",
-    "test": "mocha test",
-    "test:coverage": "istanbul cover _mocha",
-    "postinstall": "npm run build"
-  },
-  "dependencies": {
-    "nconf": "^0.7.1",
-    "tsd": "^0.6.1",
-    "typescript": "^1.5.3"
+    "test": "mocha",
+    "test:coverage": "istanbul cover node_modules/mocha/bin/_mocha"
   },
   "devDependencies": {
-    "chai": "^3.0.0",
-    "mocha": "^2.2.5",
-    "istanbul": "^0.3.14"
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.1.2"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/chalkers/wifiscanner/raw/master/LICENCE"
+      "url": "https://github.com/thingsSDK/wifiscanner/raw/master/LICENCE"
     }
   ],
-  "main": "lib/index.js"
+  "main": "index.js",
+  "dependencies": {
+    "nconf": "^0.8.4"
+  }
 }
