--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ node_js:
   - "5"
   - "6"
   - "7"
+
+install:
+  - npm install --dev
+
+script:
+  - npm run test:coverage
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-  
